# python-setup

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  example.env  pyproject.toml
alembic/: env.py
app/core/: config.py  session.py
