[tool.poetry]
name = "python-setup"
version = "0.1.0"
description = ""
authors = ["Subin Lee <subin.lee1226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"

sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
alembic = "^1.12.1"
aiomysql = "^0.2.0"
greenlet = "^3.0.1"

[tool.poetry.group.linter.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.5"
mypy = "^1.7.0"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbears
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.mypy]
python_version = "3.12"
no_namespace_packages = true
no_strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
